fixed overflow on mobile screens for the slash commands

--- a/app/assets/stylesheets/framework/markdown_area.scss
+++ b/app/assets/stylesheets/framework/markdown_area.scss
@@ -174,3 +174,13 @@
     white-space: nowrap;
   }
 }
+
+@media(max-width: $screen-xs-max) {
+  #at-view-commands {
+    left: 5px;
+
+    > .atwho-view-ul {
+      width: 350px;
+    }
+  }
+}
